follow IntelliJ's idiomatic Java code suggestions